@startuml

!include da.puml

class DatosActividadesParser {
    separator : Character
    skipLines : Integer
    getDatosActividad() : DatoActividad[]
}

DatosActividadesParser --> RepositorioTipoDeConsumo
DatosActividadesParser --> LectorDeArchivos
DatosActividadesParser ..> DatoActividad : <<creates>>

class LectorDeArchivos {
    path : String
    getLineas() : String[]
}

class RepositorioTipoDeConsumo {
    buscarPorNombre(nombre)
}

RepositorioTipoDeConsumo --> "*" TipoDeConsumo

@enduml
